# csd

./: .goreleaser.yaml  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
scripts/: make-release.sh
src/: diff.rs  main.rs  replace.rs  walk.rs
tests/: e2e.rs  stdin.rs
