[package]
name = "csd"
version = "0.1.0"
edition = "2021"
description = "A super-fast search-and-replace tool for files"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
ignore = "0.4"
rayon = "1"
memmap2 = "0.9"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
