[package]
name = "csd"
version = "0.1.1"
edition = "2021"
description = "A super-fast search-and-replace tool for files"
license = "Apache-2.0"
repository = "https://github.com/chmouel/csd"
homepage = "https://github.com/chmouel/csd"
readme = "README.md"
keywords = ["search", "replace", "regex", "cli"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
ignore = "0.4"
rayon = "1"
memmap2 = "0.9"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
